JBTIS-1245: Update UI tests for JDK 11
Signed-off-by: Andrej Podhradsky <apodhrad@redhat.com>